<resources>
    <string name="app_name">Ojo</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="fab_add_camera">Add</string>

    <string name="stream_list_default_camera_name">Unnamed camera {camNo}</string>

    <string name="add_stream_placeholder_url">rtsp://username:password@192.168.1.123:554</string>
    <string name="add_stream_placeholder_name">Camera name</string>
    <string name="add_stream_name">Camera name</string>
    <string name="add_stream_save">Save</string>
    <string name="add_stream_invalid_url">Invalid RTSP url</string>
    <string name="add_stream_invalid_url_dismiss">Dismiss</string>
    <string name="add_stream_error_saving">An error has occurred while saving configuration</string>
    <string name="add_stream">Please insert your camera\'s RTSP stream. Note that the URL differs from camera to camera: you can find the complete URL in your camera\'s settings or user manual.</string>
    <string name="menuitem_allow_rotation">Allow screen rotation</string>
    <string name="menuitem_deny_rotation">Landscape only</string>
    <string name="menuitem_info">Info</string>
    <string name="menuitem_add_camera">Add</string>
    <string name="menuitem_export_config">Export Configuration</string>
    <string name="menuitem_import_config">Import Configuration</string>

    <string name="settings_export_success">Settings exported successfully</string>
    <string name="settings_export_nothing">No settings found to export</string>
    <string name="settings_export_write_error">Unable to open file for writing</string>
    <string name="settings_export_error">Error exporting settings: %1$s</string>
    <string name="settings_export_unsupported">Export requires Android 4.4 or later</string>
    <string name="settings_import_success">Settings imported successfully</string>
    <string name="settings_import_read_error">Unable to open file for reading</string>
    <string name="settings_import_invalid">Not a valid Ojo settings file</string>
    <string name="settings_import_error">Error importing settings: %1$s</string>

    <string name="app_info_title">About Ojo</string>
    <string name="app_info_creator_desc">Created by Daniele Verducci.</string>
    <string name="app_info_license_desc">This application is licensed under the GNU GENERAL PUBLIC LICENSE v3+. You can obtain a copy here: https://raw.githubusercontent.com/penguin86/ojo/master/LICENSE</string>
    <string name="app_info_repo_desc">The source code can be obtained at the GitHub repository: https://github.com/penguin86/ojo</string>
    <string name="app_info_lib_desc">This app is made possible by the gorgeous VLC and VLC-Android teams effort! You can know more or obtain the source code at https://code.videolan.org/videolan/vlc-android</string>
    <string name="app_info_translators_title">Translators:</string>
    <string name="app_info_translators_names" translatable="false">Yurt Page (Russian)</string>
</resources>